<resources>
    <string name="app_name">Patient Profile</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login !!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up !!</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="btn_link_to_signup">Don\'t have an account, Signup !!</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="past_med_history">Past Medical History</string>
    <string name="personal_history">Personal History</string>
    <string name="family_history">Family History</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_string">Select an item</string>
    <string name="type_to_search">Type to Search</string>
    <string name="err_msg_name">Enter your full name</string>

    <string name="hint_name">Medication Name</string>
    <string name="hint_dose">Dosage (i.e 40mg)</string>
    <string name="hint_freq">Times per day (i.e 1 dose 2 times a day)</string>
    <string name="err_msg_dose">Enter a valid dosage!</string>
    <string name="err_msg_medname">Please enter the full medicine name!</string>
    <string name="err_msg_freq">Please enter daily dosage information!</string>
    <string name="btn_post">Submit</string>
    <string name="hint_reason">Reason for Prescription</string>
    <string name="hint_prevention">Preventative Care: </string>
    <string name="err_msg_docname">Enter a valid name!</string>
    <string name="err_msg_docspecialty">Enter a specialty!</string>
    <string name="err_msg_doclocation">Please enter address of main office!</string>

</resources>
