<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/defaultImage"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@mipmap/add_btn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cyan"
            android:text="Add New Medication"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_medname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_outline">

            <EditText
                android:id="@+id/input_medname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_outline">

            <EditText
                android:id="@+id/input_dose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dose"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_freq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_outline">

            <EditText
                android:id="@+id/input_freq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_freq" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_outline">

            <EditText
                android:id="@+id/input_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reason" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_prevention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_outline">

            <EditText
                android:id="@+id/input_prevention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_prevention" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_post"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_post"
            android:textColor="@android:color/white" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>